# dryeye-defender-public

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pylintrc  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  NOTICE  README.md  docker-compose.yml  eyeblink_gui.spec  hotfix.sh  local_build.sh  pyinstaller_build.spec  pyproject.toml  releaser.sh  requirements.txt  requirements_build.txt  requirements_build_mac.txt  requirements_ci.txt  requirements_linux.txt  requirements_mac.txt  requirements_submodule.txt  requirements_windows.txt  setup.cfg  setup.py  setup_windows.py  start_app_local_tz.sh  update_version_strings.sh
.github/: release.yml
.github/workflows/: build_all_and_release.yml  linux_build.yml  macos_build.yml  microsoft_build.yml  python-app.yml  test_build.yml  windows_build.yml
assets/: icon.icns
deb_build/DEBIAN/: control  postinst  postrm
deb_build/usr/share/applications/: dryeye_defender.desktop  eyeblinkgui.desktop  eyehealth.desktop
docs/: code_structure.md  installation.md
dryeye_defender/: __main__.py
dryeye_defender/licensing/: keygen.py
dryeye_defender/utils/: config.py  database.py  utils.py
dryeye_defender/widgets/: animated_blink_reminder.py  blink_graph.py  blink_model_thread.py  eyeblink_model_thread.py  settings_window.py  window.py
dryeye_defender/widgets/animated_blink_popup_window/: animated_blink_reminder.py
dryeye_defender/widgets/blink_window/: blink_graph.py  main.py
dryeye_defender/widgets/components/: animated_toggle.py  blink_model_thread.py  notification_dropdown.py  tray_icon.py
dryeye_defender/widgets/debug_window/: ear_graph.py  main.py
dryeye_defender/widgets/stats_window/: blink_graph.py  main.py
eyeblink_gui/: __main__.py
eyeblink_gui/licensing/: keygen.py
eyeblink_gui/utils/: eyeblink_verification.py  utils.py
eyeblink_gui/widgets/: animated_blink_reminder.py  blink_graph.py  debug_window.py  ear_graph.py  eyeblink_model_thread.py  eyeblink_thread.py  window.py
eyeblink_gui/widgets/debug_window/: ear_graph.py  main.py
tests/: conftest.py  gui_test.py  test_database.py  test_gui.py  utils_test.py
tests/manual/: mediaplayerwidget.py  play_sound.py  qtgraph_bar.py  qtgraph_line.py  soundeffect.py  soundeffectwidget.py
