[project]
name = "eyeblink_gui"
version = "1.0.0"
description = "Eye health software that detects blinks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python~=4.7",
    "openvino~=2022.3.0",
    "Pillow~=9.5.0",
    "PySide6~=6.4.2",
]

[tool.distutils.build_exe]
excludes = ["tkinter", "unittest", "pytest", "cx-Freeze", "coverage", "mypy","mypy-extensions", "pycodestyle", "pydocstyle", "pylint", "pylint-quotes", "pytest-timeout", "pytest-timeout", "pytest-xdist", "openvino-dev", "stubs"]
zip_include_packages = ["encodings", "PySide6"]
include_files= [ ['submodules/eyeblink-detection/assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.bin', 'assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.bin'],
   ['submodules/eyeblink-detection/assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.xml', 'assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.xml'],
   ['submodules/eyeblink-detection/assets/vino_preprocess/lmks.bin', 'assets/vino_preprocess/lmks.bin'],
   ['submodules/eyeblink-detection/assets/vino_preprocess/lmks.xml', 'assets/vino_preprocess/lmks.xml'],
   ['images/blink.png', 'images/blink.png']
]
silent_level = 1
