[project]
name = "eyeblink_gui"
version = "1.0.0",
description = "Eye health software that detects blinks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python~=4.7",
    "openvino~=2022.3.0",
    "Pillow~=9.5.0",
    "PySide6~=6.4.2",
]

[tool.distutils.build_exe]
excludes = ["tkinter", "unittest", "pytest", "cx-Freeze", "coverage", "mypy","mypy-extensions", "pycodestyle", "pydocstyle", "pylint", "pylint-quotes", "pytest-timeout", "pytest-timeout", "pytest-xdist", "openvino-dev", "stubs"]
zip_include_packages = ["encodings", "PySide6"]
include_files= [ ['submodules/eyeblink-detection/assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.bin', 'assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.bin'],
   ['submodules/eyeblink-detection/assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.xml', 'assets/face-detection-adas-0001/FP16-INT8/face-detection-adas-0001.xml'],
   ['submodules/eyeblink-detection/assets/vino_preprocess/lmks.bin', 'assets/vino_preprocess/lmks.bin'],
   ['submodules/eyeblink-detection/assets/vino_preprocess/lmks.xml', 'assets/vino_preprocess/lmks.xml'],
   ['images/blink.png', 'images/blink.png'],
   ['images/blink_animated.gif', 'images/blink_animated.gif'],
   ['images/blink_animated_anime.gif', 'images/blink_animated_anime.gif']
]
silent_level = 1

# `shiboken6`, which creates the python bindings for `Qt` C++ source, imports from a
# `zip` file into the top-level directory at runtime. These files are deleted after
# running, but `coverage` attempts to look at their source after they're gone, causing
# warnings to appear. Namely, it looks for these modules/files:
#
#    myproj/pysrcript
#    myproj/shibokensupport
#    myproj/signature_bootstrap.py
#
# To avoid this error, `source` is specified to the package subdirectory. However, this
# can also be avoided by explicitly omitting these folders in the `omit` section.
#
# See https://github.com/nedbat/coveragepy/issues/1392
#
# Also ignoring `config-3.py` and `config.py`, it is unknown why they are needed / missing
# and it is an issue that's been experienced before, possibly to do with an OpenCV bug.
# 
# See https://github.com/scoville/tkDNN/blob/e9323647ce68568972767bbacc9a88b203e6fe0b/jenkins/stage_coverage.sh#L23-L25
#
[tool.coverage.report]
omit = [
    "shibokensupport/*",
    "pyscript",
    "signature_bootstrap.py",
    "config-3.py",
    "config.py"
]
