[project]
name = "dryeye_defender"
version = "6.0.0.rc12"
description = "Software for improving eye health and preventing dry eye disease"
readme = "README.md"
requires-python = ">=3.11"

[tool.cxfreeze]
executables = [
    {script = "dryeye_defender/__main__.py", base = "gui", icon="assets/icon.ico",  target_name="dryeye_defender", shortcut_name="DryEye Defender", shortcut_dir="ProgramMenuFolder"}
]

[tool.cxfreeze.build_exe]
packages = ["playsound"]
includes = ["playsound"]
excludes = ["tkinter", "pytest", "cx-Freeze", "coverage", "mypy","mypy-extensions", "pycodestyle", "pydocstyle", "pylint", "pylint-quotes", "pytest-timeout", "pytest-timeout", "pytest-xdist", "openvino-dev", "stubs"]
optimize = 0
zip_include_packages = ["encodings", "PySide6"]
include_files= [
   ['submodules/blink-detection/assets/mediapipe/face_landmarker_v2_with_blendshapes.task', 'assets/mediapipe/face_landmarker_v2_with_blendshapes.task'],
   ['assets/blink.png', 'assets/blink.png'],
   ['assets/blink_animated.gif', 'assets/blink_animated.gif'],
   ['assets/blink_animated_anime.gif', 'assets/blink_animated_anime.gif'],
   ['assets/Logo.png', 'assets/Logo.png'],
   ['assets/audiocheck.net_sin_800Hz_-3dBFS_0.19s.wav', 'assets/audiocheck.net_sin_800Hz_-3dBFS_0.19s.wav'],
   ['assets/AvenirNextLTPro-Regular.otf', 'assets/AvenirNextLTPro-Regular.otf'],
   ['assets/AvenirNextLTPro-Bold.otf', 'assets/AvenirNextLTPro-Bold.otf'],
   ['assets/AvenirNextLTPro-It.otf', 'assets/AvenirNextLTPro-It.otf']
]
silent_level = 1

# `shiboken6`, which creates the python bindings for `Qt` C++ source, imports from a
# `zip` file into the top-level directory at runtime. These files are deleted after
# running, but `coverage` attempts to look at their source after they're gone, causing
# warnings to appear. Namely, it looks for these modules/files:
#
#    myproj/pysrcript
#    myproj/shibokensupport
#    myproj/signature_bootstrap.py
#
# To avoid this error, `source` is specified to the package subdirectory. However, this
# can also be avoided by explicitly omitting these folders in the `omit` section.
#
# See https://github.com/nedbat/coveragepy/issues/1392
#
# Also ignoring `config-3.py` and `config.py`, it is unknown why they are needed / missing
# and it is an issue that's been experienced before, possibly to do with an OpenCV bug.
#
# See https://github.com/scoville/tkDNN/blob/e9323647ce68568972767bbacc9a88b203e6fe0b/jenkins/stage_coverage.sh#L23-L25
#



[tool.coverage.report]
omit = [
    "shibokensupport/*",
    "pyscript",
    "signature_bootstrap.py",
    "config-3.py",
    "config.py"
]
